[package]
name = "github-dusterthefirst-com"
version = "0.0.0"
edition = "2021"
publish = false

[profile.release]
overflow-checks = true

[dependencies]
base64 = "0.13.0"
console_log = { version = "0.2.0", features = ["color"] }
dioxus = { version = "0.2.3", features = ["web"] }
futures = "0.3.21"
gloo-net = { version = "0.2.0", features = ["http", "json"], default-features = false }
gloo-timers = { version = "0.2.4", features = ["futures"] }
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
log = "0.4.16"
once_cell = "1.10.0"
regex = "1.5.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79" }
time = { version = "0.3.9", features = ["serde-well-known", "macros"] }
