[package]
name = "gh-dusterthefirst-com"
version = "0.0.0"
edition = "2021"
publish = false

[profile.release]
overflow-checks = true
strip = "debuginfo"
codegen-units = 1
lto = true

[profile.dev]
opt-level = 1

[dependencies]
# Logging
console_error_panic_hook = "0.1.7"
console_log = { version = "0.2.0", features = ["color"] }
log = "0.4.16"

# Web framework
dioxus = { version = "0.2.3", features = ["web"] }

# Browser APIs
gloo-events = "0.1.2"
gloo-net = { version = "0.2.0", features = ["http", "json"], default-features = false }
gloo-timers = { version = "0.2.4", features = ["futures"] }
js-sys = { version = "0.3.57" }
web-sys = { version = "0.3.57", features = ["Storage"] }

# Github API
regex = "1.5.5"
base64 = "0.13.0"
time = { version = "0.3.9", features = ["serde-well-known", "macros"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79" }
futures = "0.3.21"
once_cell = "1.10.0"
